--- a/templates/base.html
+++ b/templates/base.html
@@ -13,18 +13,18 @@
     {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light p-3 mb-2 bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light p-3 bg-dark">
         <div class="row" style="width: 100% !important">
           <div class="col-sm-3">
-            <a class="navbar-brand" style="color: white !important" href="#">LOGO(--HERE--)</a>
+            <a class="navbar-brand" style="color: white !important" href="{% url 'index' %}">LOGO(--HERE--)</a>
           </div>
-          <div class="col-sm-7">
+          <div class="col-sm-6">
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
           </div>
-          <div class="col-sm-1">
+          <div class="col-sm-2">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link navText" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link navText" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link navText" href="#">About</a>
@@ -42,7 +42,17 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Profile
+                    
+                    <i class="fa fa-shopping-cart userSection" aria-hidden="true"></i>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{%url 'view_cart' %}">View Cart</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="btn btn-success cartCheckout" href="{% url 'checkout' %}" role="button">Checkout</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-user userSection" aria-hidden="true"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
