--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,21 @@
                   <a class="nav-link navText" href="#">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
+                  <a class="nav-link navText dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Catergories
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Mens</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Womens</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Unisex</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Extra</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    
                     <i class="fa fa-shopping-cart userSection" aria-hidden="true"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
