--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -53,14 +53,14 @@
       <div class="row">
         <div class="col-sm-2" style="background-color: grey;padding-left: 0;padding-right: 0;">
           <div class="list-group" id="list-tab" role="tablist">
-            <a class="list-group-item list-group-item-action disabled headerCat">Catergories</a>
+            <a class="list-group-item list-group-item-action disabled header-cat">Catergories</a>
             <a class="list-group-item list-group-item-action active" id="list-mens-list" data-toggle="list" href="#list-mens" role="tab" aria-controls="mens">Mens</a>
             <a class="list-group-item list-group-item-action" id="list-womens-list" data-toggle="list" href="#list-womens" role="tab" aria-controls="womens">Womens</a>
             <a class="list-group-item list-group-item-action" id="list-unisex-list" data-toggle="list" href="#list-unisex" role="tab" aria-controls="unisex">Unisex</a>
             <a class="list-group-item list-group-item-action" id="list-extra-list" data-toggle="list" href="#list-extra" role="tab" aria-controls="settings">Extra</a>
           </div>
         </div>
-        <div class="col-sm-10" style="background-color: white;">
+        <div class="col-sm-10 cat-base">
           <div class="tab-content" id="nav-tabContent">
             {% block cats %}
             
