--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,17 +3,30 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+<div class="container">
+    <div class="accordion" id="accordionCart">
+        <div class="row row-flex">
+            {% for item in cart_items %}
+            <div class="card" style="width: 100% !important;">
+                <div class="card-header" id="heading{{ item.id }}">
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse{{ item.id }}" aria-expanded="true" aria-controls="collapse{{ item.id }}" style="width: 100% !important;">
+                    <div class="row">
+                        <div class="col-sm-2">
+                        <div class="cart-product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+                        </div>
+                        <div class="col-sm-8">
+                            <h3 class="cart-product-name">{{ item.product.name }}</h3>
+                        </div>
+                        <div class="col-sm-2">
+                            <h3 class="cart-product-price">£ {{ item.product.price }}</h3>
+                        </div>
+                    </div>
+                </button>
+                </div>
             
-            <div class="caption">
-                <h3>{{ item.product.name }}</h3>
-                <p class="product-description">{{ item.product.description}}</p>
-                <p>{{ item.product.price }}</p>
-                <p>
-                    
+                <div id="collapse{{ item.id }}" class="collapse" aria-labelledby="heading{{ item.id }}" data-parent="#accordionCart">
+                  <div class="card-body">
+                    <p class="product-description">{{ item.product.description}}</p>
                     <form action="{% url 'adjust_cart' item.id %}" method="post" class="form-inline">
                         {% csrf_token %}
                         <div class="form-group">
@@ -26,16 +39,26 @@
                         </div>
                         <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
                     </form> 
-                </p>
-            </div>
+                  </div>
+                </div>
+             </div>
+            {% endfor %}
         </div>
-    {% endfor %}
-</div>
+    </div>
 
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphiconglyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout'%}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>CheckOut</a>
+    <div class="row">
+        <div class="col-sm-4">
+            <p class="Total">Total</p>
+        </div>
+        <div class="col-sm-4">
+            <p><span class="glyphiconglyphicon-euro" aria-hidden="true"></span>£ {{ total }} </p>
+        </div>
+        <div class="col-sm-4">
+            <a href="{% url 'checkout'%}" class="btn btn-success" role="button" style="width: 100%;color: black !important;"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>CheckOut</a>
+        </div>
+        
+    </div>
+
 </div>
 
 {% endblock %}
